# smart_cleaning_robot

./: README.md
akilli_supurge_robotu/: CMakeLists.txt  README.md  package.xml
akilli_supurge_robotu/config/: gorev.yaml
akilli_supurge_robotu/haritalar/: ev_haritasi.pgm  ev_haritasi.yaml
akilli_supurge_robotu/launch/: gorev_yoneticisi.launch  navigasyon.launch  simulasyon.launch  slam.launch
akilli_supurge_robotu/models/qr_koridor/: model.config  model.sdf
akilli_supurge_robotu/models/qr_mutfak/: model.config  model.sdf
akilli_supurge_robotu/models/qr_salon/: model.config  model.sdf
akilli_supurge_robotu/models/qr_yatak_odasi/: model.config  model.sdf
akilli_supurge_robotu/rviz/: navigasyon.rviz
akilli_supurge_robotu/src/: ev_tarama.py  gorev_yoneticisi.py  qr_okuyucu.py
akilli_supurge_robotu/world/: ev_qr.world
